# wpdl-py-cross

./: README.md  pyproject.toml
.github/workflows/: build-android.yml  build-desktop.yml  python-app.yml  release.yml
src/: endpoints.py  main.py  parser.py
