[project]
name = "wpdl-py-desktop"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Longwang Dev", email = "long@wpdl.us" }
]
dependencies = [
  "aiohappyeyeballs>=2.6.1",
  "aiohttp==3.9.5",
  "aiosignal>=1.4.0",
  "attrs>=25.3.0",
  "backoff>=2.2.1",
  "beautifulsoup4>=4.13.4",
  "bs4>=0.0.2",
  "ebooklib>=0.19",
  "flet==0.28.3",
  "frozenlist>=1.7.0",
  "idna>=3.10",
  "lxml>=6.0.0",
  "multidict>=6.6.3",
  "propcache>=0.3.2",
  "six>=1.17.0",
  "soupsieve>=2.7",
  "typing-extensions>=4.14.1",
  "yarl>=1.20.1",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "us.wpdl"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "wpdl-py"

# company name to display in about app dialogs
company = "Longwang"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Longwang"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[tool.flet.android]
split_per_abi = false
min_sdk_version = 21
target_sdk_version = 35

[tool.flet.splash]
android = true

[tool.flet.android.permission]
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.READ_EXTERNAL_STORAGE" = true

[tool.flet.android.feature]

[tool.flet.android.signing]
key_store = "wpdl-py.jks" # --android-signing-key-store
key_alias = "wpdl-py"
